# lets-learn-vulkan

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  temp.txt
TEMP/: dynamic-uniform-buffers.txt
assets/shaders/: triangle.frag  triangle.vert
src/: main.rs
