[package]
name = "lets-learn-vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
ash = { version = "0.37.2", features = ["linked"] }
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
winit = "0.27.5"

[build-dependencies]
naga = { version = "0.11.0", features = ["glsl-in", "spv-out"] }