[package]
name = "lets-learn-vulkan"
version = "0.1.0"
edition = "2021"
description = "This package is simply a dump for my explorations in Vulkan"
license-file = "LICENSE"
repository = "https://github.com/ForgottenMaster/lets-learn-vulkan"

[dependencies]
anyhow = "1.0.68"
ash = { version = "0.37.2", features = ["linked"] }
ash-window = "0.12.0"
glam = "0.23.0"
raw-window-handle = "0.5.0"
winit = "0.27.5"

[build-dependencies]
naga = { version = "0.11.0", features = ["glsl-in", "spv-out"] }
tinytemplate = "1.2.1"
serde_derive = "1.0.152"
serde = "1.0.152"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

[workspace.metadata.release]
publish = false