[package]
name = "lets-learn-vulkan"
version = "0.1.0"
edition = "2021"
description = "This package is simply a dump for my explorations in Vulkan"
license-file = "LICENSE"
repository = "https://github.com/ForgottenMaster/lets-learn-vulkan"

[dependencies]
anyhow = "1.0.68"
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
glam = "0.23.0"
raw-window-handle = "0.5.0"
winit = "0.27.5"

[build-dependencies]
naga = { version = "0.11.0", features = ["glsl-in", "spv-out"] }
tinytemplate = "1.2.1"
serde_derive = "1.0.152"
serde = "1.0.152"
